--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sanity": "sanity dev"
   },
   "dependencies": {
+    "@sanity/client": "^7.8.1",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^4.1.1",
     "next": "15.4.2",
+    "next-sanity": "^10.0.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "sanity": "^4.1.1",
+    "styled-components": "^6.1.19",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@sanity/cli": "^4.1.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
