--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "sanity": "^4.1.1",
+    "sanity-plugin-media": "^4.0.0",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.10"
   },
