--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/client": "^7.8.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^4.1.1",
+    "lightgallery": "^2.9.0-beta.1",
     "next": "15.4.2",
     "next-sanity": "^10.0.4",
     "react": "19.1.0",
