--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^4.1.1",
     "lightgallery": "^2.9.0-beta.1",
-    "next": "15.4.2",
+    "next": "^16.1.1",
     "next-sanity": "^10.0.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "sanity": "^4.1.1",
     "sanity-plugin-media": "^4.0.0",
